--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,36 @@
   text-decoration: none;
 }
 
-.header-nav {
+/* -----Header----- */
+
+.header {
+}
+
+.logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
+
+  letter-spacing: 0.03em;
+
+  color: #2196f3;
+}
+
+.header-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
   color: #212121;
 }
 
-.link:hover {
+.header-link:hover {
   color: #2196f3;
 }
 
@@ -20,6 +45,12 @@
 .link-tel,
 .link-mail {
   color: #757575;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .under-header {
@@ -35,6 +66,23 @@
 .under-header-btn {
   background-color: #2196f3;
   color: #ffffff;
+  position: absolute;
+  width: 136px;
+  height: 30px;
+  left: 732px;
+  top: 440px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  /* identical to box height, or 187% */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 .footer {
