--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .container {
-  width: 1600px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -40,6 +40,8 @@ body {
   background-color: white;
   padding-top: 25px;
   padding-bottom: 25px;
+  display: flex;
+  border: 1px solid #ececec;
 }
 .header-container {
   display: flex;
@@ -53,15 +55,10 @@ body {
   letter-spacing: 0.03em;
   color: var(--header-color);
   margin-right: 93px;
-  margin-left: 215px;
 }
 
 .logo-color {
   color: var(--logo-color);
-}
-
-.heder-connect {
-  margin-left: auto;
 }
 
 .header-list {
@@ -81,6 +78,11 @@ body {
   color: #212121;
 }
 
+.heder-connect {
+  margin-left: auto;
+  margin-right: 215px;
+}
+
 .link-tel,
 .link-mail {
   color: #757575;
@@ -90,12 +92,8 @@ body {
   letter-spacing: 0.02em;
 }
 
-.link-tel {
-  margin-right: 50px;
-}
-
 .link-mail {
-  padding-right: 215px;
+  padding-right: 50px;
 }
 
 .header-link:hover,
@@ -113,7 +111,8 @@ body {
 
 .under-header {
   background-color: #2f303a;
-  margin-bottom: 94px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .under-header-h1 {
@@ -122,26 +121,20 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
+  letter-spacing: 0.06em;
+  text-align: center;
   color: var(--first-title-color);
-  padding-top: 200px;
   margin-bottom: 30px;
-  padding-left: 452px;
-  padding-right: 452px;
 }
 
 .under-header-btn {
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+  text-align: center;
   background-color: var(--accent-color);
   color: var(--first-title-color);
-  padding-bottom: 200px;
 }
 
 .under-header-btn:hover {
@@ -152,23 +145,27 @@ body {
   margin-bottom: 94px;
 }
 
+.list-section {
+  display: flex;
+  padding-top: 94px;
+}
+
 .section-item {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
   color: var(--second-title-color);
   margin-bottom: 10px;
+  margin-right: 30px;
 }
 
 .section-text {
   font-size: 14px;
   line-height: 1.71;
-
   letter-spacing: 0.03em;
-
   color: #757575;
+  margin-right: 30px;
 }
 
 .activity {
@@ -185,6 +182,14 @@ body {
   margin-bottom: 50px;
 }
 
+.list-activity {
+  display: flex;
+}
+
+.activity-img:not(:last-child) {
+  margin-right: 30px;
+}
+
 .team {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -198,6 +203,19 @@ body {
 
   color: var(--second-title-color);
   margin-bottom: 50px;
+}
+
+.list-team {
+  display: flex;
+}
+
+.team-card:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-name {
